# block-timestamp-logger

./: .gitignore  Cargo.toml  LICENSE  README-analysis.md  README.md  analyze_timestamps.py  run-logger.sh
logs/: Base_deltas.csv  Base_detailed.csv  Base_stats.csv  Optimism_deltas.csv  Optimism_detailed.csv  Optimism_stats.csv  Unichain_deltas.csv  Unichain_detailed.csv  Unichain_stats.csv
src/: main.rs
