[package]
name = "block-timestamp-logger"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy-primitives = "0.3.3"
alloy-json-rpc = "0.3.3"
alloy-transport = "0.3.3"
alloy-transport-http = "0.3.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.31"
tokio = { version = "1.35.0", features = ["full"] }
futures = "0.3.30"
env_logger = "0.10.1"
log = "0.4.20"
clap = { version = "4.4.12", features = ["derive", "env"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
csv = "1.3.0"
anyhow = "1.0.76"

